--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "oasis-tribute",
   "version": "0.1.0",
   "private": true,
+  "author": "Sanghyun Park",
+  "description": "Tribute web site for Oasis, built with NextJS, Framer Motion, TailwindCSS",
+  "repository": {},
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "contentful": "^8.1.5",
+    "framer-motion": "^3.1.1",
     "next": "10.0.4",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
+    "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
